Remove Java 9 module option from target instrumentation